--- a/index.html
+++ b/index.html
@@ -648,19 +648,9 @@ ul li dt {
 
 <hr />
 
-<h3 id="degree">教育信息</h3>
+<h3 id="profile">自我评价</h3>
 
-<dl>
-<dt>中国科学技术大学</dt>
-<dd><em>软件工程 硕士</em>
-<strong>2010年至2013年</strong>
-主修：实用算法设计，软件设计模式，Linux 内核分析，设备驱动程序设计。</dd>
-
-<dt>中国地质大学（北京）</dt>
-<dd><em>电子信息工程 本科</em>
-<strong>2006年至2010年</strong>
-主修：操作系统，数据结构与算法，微机原理与汇编语言。</dd>
-</dl>
+<p>热爱开源，对新技术敏感。理性，沟通能力强，做事有条理，有一定架构能力和领导能力。</p>
 
 <hr />
 
@@ -669,60 +659,66 @@ ul li dt {
 <ul>
 <li><dl>
 <dt>开源技术</dt>
-<dd>八年 Linux 维护与开发经验，精通开源社区开发流程。阅读过内核源代码，了解内核驱动开发。</dd>
+<dd>八年 Linux 经验，精通开源社区开发流程。阅读过 Linux 内核及诸多开源代码，时常贡献开源，并拥有自己的开源项目。</dd>
 
-<dd>熟悉 C, Python, Ruby, Scala 等编程语言，了解 Go, Rust 等前沿语言。</dd>
+<dd>熟悉 C, Python, Ruby, Scala 等编程语言，使用过 Go, Rust 等前沿语言。</dd>
 </dl></li>
 <li><dl>
 <dt>分布式·云计算</dt>
 <dd>作为主力人员，组建全公司弹性私有云计算平台，分布式视频转码平台，PaaS 平台。</dd>
 
-<dd>在公司内部推广 Mesos, Docker, Spark, Ansible 等新兴技术的使用，并回馈开源社区。</dd>
+<dd>在公司内部推广 Mesos, Docker, Spark, Ansible 等新兴技术的使用，并为相关开源项目贡献代码。</dd>
 </dl></li>
 <li><dl>
 <dt>Web 全栈</dt>
-<dd>熟练使用 AngularJS, Bootstrap, CoffeeScript, Ruby on Rails, Flask 等技术，快速构建 Web 应用。</dd>
+<dd>熟练使用 AngularJS, Bootstrap, CoffeeScript, Sass, Ruby on Rails, Django, Flask 等技术，快速构建 Web 应用。</dd>
 
-<dd>熟练使用 Bower, Gulp, npm, Guard 等前端工具。</dd>
+<dd>熟练使用 Yeoman, Bower, Grunt, Gulp, npm, Guard 等前端工具。</dd>
 </dl></li>
 </ul>
 
 <hr />
 
-<h3 id="experience">工作经验</h3>
+<h3 id="experience">个人经历</h3>
 
 <dl>
-<dt>爱奇艺云开发平台</dt>
-<dd><em>爱奇艺 - 架构者·主力开发人员</em>
-<strong>2014年9月至今</strong></dd>
+<dt>中国地质大学（北京）</dt>
+<dd><em>电子信息工程 本科</em>
+<strong>2006年9月至2010年6月</strong>
+项目经验： 掩耳下载器（Python 3, Twisted, GTK+），参与 KDE、Compiz 等开源项目（C++, Python）。</dd>
 
-<dd>构建公司私有 PaaS 平台（基于 Marathon, Docker），提供一套集「版本控制」、「代码复审」、「持续集成」、「持续部署」、「负载均衡」、「健康检查」、「Auto Scaling」等于一身的自动化开发者平台。</dd>
+<dt>中国科学技术大学</dt>
+<dd><em>软件工程 硕士</em>
+<strong>2010年9月至2013年3月</strong>
+项目经验： 云媒体播放系统（C），Java 编译器（SML），Google V8 引擎的 ITT 支持（C++，Intel 实习）。</dd>
 
-<dd>作为技术领导者，进行概要设计、设计界面草图、制定开发计划，带领团队成员高效有序开发。</dd>
+<dt>OpenStack vSphere 引擎</dt>
+<dd><em>爱奇艺 - 独力开发</em>
+<strong>2013年3月至2013年7月</strong></dd>
 
-<dd>回馈开源，为开源社区回馈补丁数十个（多数为 Scala），在 Marathon 代码贡献者中名列前茅。</dd>
+<dd>为公司 OpenStack 平台提供 VMware vSphere 支持，为公司的数百台物理机和上千台虚拟机提供信息抓取、创建、修改、删除、查询、电源操作等功能。</dd>
+
+<dd>使用 Perl 封装了 VSphere API，并使用 Python 实现 REST API、Web 界面。测试驱动开发，为每个 API 都提供了完整的单元测试用例。</dd>
 
 <dt>爱奇艺弹性计算平台</dt>
 <dd><em>爱奇艺 - 独力开发</em>
 <strong>2013年7月至2014年9月</strong></dd>
 
-<dd>独力搭建公司级「弹性私有云计算平台」（基于 Mesos, Docker），并独力编写 Web 管理、审计系统。</dd>
+<dd>独力搭建公司级「弹性私有云计算平台」（基于 Mesos, Docker），与同事协作，促成 Hadoop, Spark, Storm, Chronos 等分布式计算组件在该弹性计算平台的应用。</dd>
 
-<dd>在此平台上，编写「弹性分布式视频转码框架」（Python），支撑了全公司所有用户上传视频（UGC）的转码，为公司提供了性能更高、扩展性更强、几乎零维护成本的分布式视频转码解决方案。并与同事协作，推动 Hadoop, Spark, Storm, Chronos 等分布式计算组件在该弹性计算平台的应用。</dd>
+<dd>在此平台上，编写「弹性分布式视频转码框架」（Python），支撑了全公司所有用户上传视频（UGC）的转码，为公司提供了性能更高、扩展性更强、几乎零维护成本的分布式视频转码解决方案。独力编写用户体验优良的 Web 管理系统（使用 AngularJS, Rails, MongoDB）。</dd>
 
 <dd>多次对公司内外人员提供弹性计算相关培训与公开课。</dd>
 
-<dt>OpenStack VMware vSphere 支持</dt>
-<dd><em>爱奇艺 - 独力开发</em>
-<strong>2013年3月至2013年7月</strong></dd>
+<dt>爱奇艺云开发平台</dt>
+<dd><em>爱奇艺 - 架构者·主力开发人员</em>
+<strong>2014年9月至今</strong></dd>
 
-<dd>为公司 OpenStack 平台提供 VMware vSphere 支持，支持虚拟机的创建、修改、删除、查询、电源操作等完善的 API，并为运维人员提供操作界面（使用 Flask, MySQL）。</dd>
+<dd>构建一套集版本控制、代码复审、持续集成、持续部署、负载均衡、健康检查、Auto Scaling 等于一身的公司级私有 PaaS 平台（基于 Marathon, Docker）。</dd>
 
-<dt>跨浏览器 ITT 支持</dt>
-<dd><em>英特尔 - 独力开发</em>
-<strong>2012年6月至2012年11月</strong></dd>
+<dd>作为技术领导者，设计界面草图、制定开发计划、开发核心模块，带领团队成员高效有序开发。</dd>
 
-<dd>修改 Google V8 引擎（C++），使 Google Chromium 浏览器支持 ITT (Intel® Instrumentation and Tracing Technology) 技术，使用户能够方便地调试自己的 JavaScript 应用的性能。对于其他浏览器（IE, Firefox 等），则提供了 NPAPI 解决方案（使用 C++, FireBreath）。</dd>
+<dd>回馈开源，为相关开源项目回馈补丁数十个（多数为 Scala），在 Marathon 代码贡献者中名列前茅。</dd>
 </dl>
 
 <hr />
@@ -737,12 +733,6 @@ ul li dt {
 <li><strong>优秀毕业生</strong> - 中国科学技术大学</li>
 <li></li>
 </ol>
-
-<hr />
-
-<h3 id="profile">自我评价</h3>
-
-<p>热爱开源，对新技术敏感。理性，沟通能力强，做事有条理，有一定架构能力和领导能力。</p>
 
 <hr />
 
