--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 
-<title>Iven | 开源·分布式·云计算</title>
+<title>许立剑 | 开源·分布式·云计算</title>
 <style type="text/css">
 
 article,
@@ -632,16 +632,12 @@ ul li dt {
 
 <div class="container">
     <div class="resume">
-        <!-- # 许立剑 -->
-
-<h1>Iven</h1>
+        <h1>许立剑</h1>
 
 <h2>开源·分布式·云计算</h2>
 
-<!-- > (+86) 156-5234-4221  -->
-
 <blockquote>
-  <p>(+86)<br />
+  <p>(+86) 156-5234-4221<br />
   <a href="ivenvd@gmail.com">ivenvd@gmail.com</a><br />
   <a href="http://www.kissuki.com/">http://www.kissuki.com/</a></p>
 </blockquote>
@@ -667,11 +663,11 @@ ul li dt {
 <dt>分布式·云计算</dt>
 <dd>作为主力人员，组建全公司弹性私有云计算平台，分布式视频转码平台，PaaS 平台。</dd>
 
-<dd>在公司内部推广 Mesos, Docker, Spark, Ansible 等新兴技术的使用，并为相关开源项目贡献代码。</dd>
+<dd>在公司内部推广 Mesos, Docker, Spark, Ansible, Vagrant 等新兴技术的使用，并为相关开源项目贡献代码。</dd>
 </dl></li>
 <li><dl>
-<dt>Web 全栈</dt>
-<dd>熟练使用 AngularJS, Bootstrap, CoffeeScript, Sass, Ruby on Rails, Django, Flask 等技术，快速构建 Web 应用。</dd>
+<dt>Web 开发</dt>
+<dd>熟练使用 AngularJS, Sass, CoffeeScript, Bootstrap, Rails, Django, Flask 等技术，快速构建 Web 应用。</dd>
 
 <dd>熟练使用 Yeoman, Bower, Grunt, Gulp, npm, Guard 等前端工具。</dd>
 </dl></li>
@@ -685,7 +681,7 @@ ul li dt {
 <dt>中国地质大学（北京）</dt>
 <dd><em>电子信息工程 本科</em>
 <strong>2006年9月至2010年6月</strong>
-项目经验： 掩耳下载器（Python 3, Twisted, GTK+），参与 KDE、Compiz 等开源项目（C++, Python）。</dd>
+项目经验： 掩耳下载器（Python 3, Twisted），参与 KDE、Compiz、QSanguosha 等开源项目（C++）。</dd>
 
 <dt>中国科学技术大学</dt>
 <dd><em>软件工程 硕士</em>
@@ -704,11 +700,11 @@ ul li dt {
 <dd><em>爱奇艺 - 独力开发</em>
 <strong>2013年7月至2014年9月</strong></dd>
 
-<dd>独力搭建公司级「弹性私有云计算平台」（基于 Mesos, Docker），与同事协作，促成 Hadoop, Spark, Storm, Chronos 等分布式计算组件在该弹性计算平台的应用。</dd>
+<dd>独力搭建公司级「弹性私有云计算平台」（基于 Mesos, Docker），驱动 500 台以上虚拟机、物理机协同工作。与同事协作，促成 Hadoop, Spark, Storm, Chronos 等分布式计算组件在该弹性计算平台的应用。</dd>
 
-<dd>在此平台上，编写「弹性分布式视频转码框架」（Python），支撑了全公司所有用户上传视频（UGC）的转码，为公司提供了性能更高、扩展性更强、几乎零维护成本的分布式视频转码解决方案。独力编写用户体验优良的 Web 管理系统（使用 AngularJS, Rails, MongoDB）。</dd>
+<dd>编写「弹性分布式视频转码框架」（使用 Python），支撑了全公司所有用户上传视频（UGC）的转码，为公司提供了性能更高、扩展性更强、几乎零维护成本的分布式视频转码解决方案。独力编写用户体验优良的 Web 管理系统（使用 AngularJS, Rails, MongoDB）。</dd>
 
-<dd>多次对公司内外人员提供弹性计算相关培训与公开课。</dd>
+<dd>多次对公司内外人员提供弹性计算相关培训与公开课，并发表相关专利和杂志文章若干。</dd>
 
 <dt>爱奇艺云开发平台</dt>
 <dd><em>爱奇艺 - 架构者·主力开发人员</em>
