Remove contact info

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 
-<title>许立剑 | 开源·分布式·云计算</title>
+<title>Iven | 开源·分布式·云计算</title>
 <style type="text/css">
 
 article,
@@ -632,13 +632,16 @@ ul li dt {
 
 <div class="container">
     <div class="resume">
-        <h1>许立剑</h1>
+        <!-- # 许立剑 -->
+
+<h1>Iven</h1>
 
 <h2>开源·分布式·云计算</h2>
 
+<!-- > (+86) 156-5234-4221  -->
+
 <blockquote>
-  <p>(+86) 156-5234-4221<br />
-  <a href="ivenvd@gmail.com">ivenvd@gmail.com</a><br />
+  <p><a href="ivenvd@gmail.com">ivenvd@gmail.com</a><br />
   <a href="http://www.kissuki.com/">http://www.kissuki.com/</a></p>
 </blockquote>
 
