--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 
-<title>Iven | 开源·分布式·云计算</title>
+<title>Iven | 开源·云计算·全栈开发</title>
 <style type="text/css">
 
 article,
@@ -632,24 +632,14 @@ ul li dt {
 
 <div class="container">
     <div class="resume">
-        <!-- # 许立剑 -->
+        <h1>Iven</h1>
 
-<h1>Iven</h1>
-
-<h2>开源·分布式·云计算</h2>
-
-<!-- > (+86) 156-5234-4221  -->
+<h2>开源·云计算·全栈开发</h2>
 
 <blockquote>
   <p><a href="ivenvd@gmail.com">ivenvd@gmail.com</a><br />
-  <a href="http://www.kissuki.com/">http://www.kissuki.com/</a></p>
+  <a href="https://github.com/iven/">https://github.com/iven/</a></p>
 </blockquote>
-
-<hr />
-
-<h3 id="profile">自我评价</h3>
-
-<p>热爱开源，对新技术敏感。理性，沟通能力强，做事有条理，有一定架构能力和领导能力。</p>
 
 <hr />
 
@@ -658,21 +648,21 @@ ul li dt {
 <ul>
 <li><dl>
 <dt>开源技术</dt>
-<dd>八年 Linux 经验，精通开源社区开发流程。阅读过 Linux 内核及诸多开源代码，时常贡献开源，并拥有自己的开源项目。</dd>
+<dd>Linux/开源爱好者，精通开源社区开发流程。阅读过 Linux 内核在内的诸多开源代码，时常贡献开源，并拥有自己的开源项目。</dd>
 
 <dd>熟悉 C, Python, Ruby, Scala 等编程语言，使用过 Go, Rust 等前沿语言。</dd>
 </dl></li>
 <li><dl>
-<dt>分布式·云计算</dt>
-<dd>作为主力人员，组建全公司弹性私有云计算平台，分布式视频转码平台，PaaS 平台。</dd>
+<dt>基础架构</dt>
+<dd>作为主力人员，从零组建爱奇艺弹性私有云计算平台，分布式视频转码平台，PaaS 平台。</dd>
 
 <dd>在公司内部推广 Mesos, Docker, Spark, Ansible, Vagrant 等新兴技术的使用，并为相关开源项目贡献代码。</dd>
 </dl></li>
 <li><dl>
-<dt>Web 开发</dt>
-<dd>熟练使用 AngularJS, Sass, CoffeeScript, Bootstrap, Rails, Django, Flask 等技术，快速构建 Web 应用。</dd>
+<dt>Web 前后端</dt>
+<dd>熟练使用 Django, Rails, MySQL, Redis, AngularJS, Vue.js, Webpack 等前后端技术，快速构建 HTML5 应用。</dd>
 
-<dd>熟练使用 Yeoman, Bower, Grunt, Gulp, npm, Guard 等前端工具。</dd>
+<dd>熟悉 PC、移动端的 Web、RESTful API 开发，熟练掌握响应式开发、前后端分离技术。</dd>
 </dl></li>
 </ul>
 
@@ -681,57 +671,63 @@ ul li dt {
 <h3 id="experience">个人经历</h3>
 
 <dl>
-<dt>中国地质大学（北京）</dt>
-<dd><em>电子信息工程 本科</em>
-<strong>2006年9月至2010年6月</strong>
-项目经验： 掩耳下载器（Python 3, Twisted），参与 KDE、Compiz、QSanguosha 等开源项目（C++）。</dd>
+<dt>北京微学明日网络科技有限公司</dt>
+<dd>
+<p><em>优答（在线教育类 APP）</em>
+<strong>2015.05 - 2016.06</strong></p>
+</dd>
+
+<dd>负责 Django Web 前后端、API、Scrapy 爬虫、缓存等功能的编写，实现和改进了支付宝/微信支付系统、题目导入渲染、拍照扫题等多个功能模块，深入定制 Django Admin 满足题库功能需求。</dd>
+
+<dd>
+<p><em>优学本（Pad 课堂教学）</em>
+<strong>2016.01 - 2016.06</strong></p>
+</dd>
+
+<dd>负责教师后台系统前后端的架构与代码编写，实现了一套集题目组卷、课件上传与演示、作业布置批改与数据分析等于一身的校级教学管理系统。敏捷开发，熟悉 Scrum、测试驱动开发机制。</dd>
+
+<dt>北京奇艺世纪科技有限公司</dt>
+<dd>
+<p><em>爱奇艺开发者平台</em>
+<strong>2014.09 - 2015.05</strong></p>
+</dd>
+
+<dd>作为架构者，带领团队从零构建一套集版本控制、代码复审、持续集成、持续部署、负载均衡、健康检查、Auto Scaling 等于一身的公司级私有 PaaS 平台（基于 Marathon, Docker，Jenkins, GitLab，Nginx）。</dd>
+
+<dd>沟通用户需求、设计界面草图、制定开发计划、开发核心模块，带领团队成员高效有序开发。</dd>
+
+<dd>
+<p><em>爱奇艺私有云平台</em>
+<strong>2013.07 - 2014.09</strong></p>
+</dd>
+
+<dd>独自从零开始构建公司私有云平台（基于 Mesos, Docker），驱动 500 台以上虚拟机、物理机协同工作。合作促成 Hadoop, Spark, Storm, Chronos 等分布式计算组件在该平台的应用，并接入公司的视频转码业务，以使以上各组件在该平台上实现弹性资源分配。并为其编写控制、审计后台。</dd>
+
+<dd>多次对公司内外人员提供弹性计算相关培训与公开课，并发表相关专利和杂志文章若干，提交开源代码若干。</dd>
+
+<dd>
+<p><em>OpenStack 二次开发</em>
+<strong>2013.03 - 2013.07</strong></p>
+</dd>
+
+<dd>编写代码为公司 OpenStack 平台添加 VMWare 虚拟机管理、统计功能；扩展 OpenStack Web 管理后台，提供虚拟机密码修改、VNC 远程连接等功能支持。</dd>
 
 <dt>中国科学技术大学</dt>
-<dd><em>软件工程 硕士</em>
-<strong>2010年9月至2013年3月</strong>
-项目经验： 云媒体播放系统（C），Java 编译器（SML），Google V8 引擎的 ITT 支持（C++，Intel 实习）。</dd>
+<dd>
+<p><em>软件工程 硕士</em>
+<strong>2010.09 - 2013.03</strong></p>
+</dd>
 
-<dt>OpenStack vSphere 引擎</dt>
-<dd><em>爱奇艺 - 独力开发</em>
-<strong>2013年3月至2013年7月</strong></dd>
+<dd>在 Intel 公司实习，负责 Meego 性能优化、Google Chromium 核心定制等工作。</dd>
 
-<dd>为公司 OpenStack 平台提供 VMware vSphere 支持，为公司的数百台物理机和上千台虚拟机提供信息抓取、创建、修改、删除、查询、电源操作等功能。</dd>
+<dt>中国地质大学（北京）</dt>
+<dd>
+<p><em>电子信息工程 本科</em>
+<strong>2006.09 - 2010.06</strong></p>
+</dd>
 
-<dd>使用 Perl 封装了 VSphere API，并使用 Python 实现 REST API、Web 界面。测试驱动开发，为每个 API 都提供了完整的单元测试用例。</dd>
-
-<dt>爱奇艺弹性计算平台</dt>
-<dd><em>爱奇艺 - 独力开发</em>
-<strong>2013年7月至2014年9月</strong></dd>
-
-<dd>独力搭建公司级「弹性私有云计算平台」（基于 Mesos, Docker），驱动 500 台以上虚拟机、物理机协同工作。与同事协作，促成 Hadoop, Spark, Storm, Chronos 等分布式计算组件在该弹性计算平台的应用。</dd>
-
-<dd>编写「弹性分布式视频转码框架」（使用 Python），支撑了全公司所有用户上传视频（UGC）的转码，为公司提供了性能更高、扩展性更强、几乎零维护成本的分布式视频转码解决方案。独力编写用户体验优良的 Web 管理系统（使用 AngularJS, Rails, MongoDB）。</dd>
-
-<dd>多次对公司内外人员提供弹性计算相关培训与公开课，并发表相关专利和杂志文章若干。</dd>
-
-<dt>爱奇艺云开发平台</dt>
-<dd><em>爱奇艺 - 架构者·主力开发人员</em>
-<strong>2014年9月至今</strong></dd>
-
-<dd>构建一套集版本控制、代码复审、持续集成、持续部署、负载均衡、健康检查、Auto Scaling 等于一身的公司级私有 PaaS 平台（基于 Marathon, Docker）。</dd>
-
-<dd>作为技术领导者，设计界面草图、制定开发计划、开发核心模块，带领团队成员高效有序开发。</dd>
-
-<dd>回馈开源，为相关开源项目回馈补丁数十个（多数为 Scala），在 Marathon 代码贡献者中名列前茅。</dd>
+<dd>参与 KDE、Compiz、QSanguosha 等开源项目（C++）。在红帽软件（Red Hat）实习，负责内核测试工作。</dd>
 </dl>
-
-<hr />
-
-<h3 id="award">证书荣誉</h3>
-
-<ol>
-<li><strong>优秀项目奖</strong> - 爱奇艺</li>
-<li><strong>最佳服务奖</strong> - 爱奇艺</li>
-<li><strong>希望之星</strong> - 爱奇艺</li>
-<li><strong>优秀实习生</strong> - 英特尔</li>
-<li><strong>优秀毕业生</strong> - 中国科学技术大学</li>
-<li></li>
-</ol>
 
 <hr />
 
