--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta http-equiv="refresh" content="yes">
 
 <title>Iven | 云原生 . 微服务 . 工程效率 . Python . Go</title>
 <style type="text/css">
@@ -641,6 +640,31 @@ ul li dt {
 
 <hr />
 
+<h3 id="skill">知识技能</h3>
+
+<ul>
+<li><dl>
+<dt>PaaS 平台开发</dt>
+<dd>熟悉 CI/CD 相关技术，对于应用的生命周期、质量保障、日志监控、故障管理、配置管理等有完整的了解。</dd>
+
+<dd>拥有从零开始架构应用平台、推动其在全公司范围内落地的经验。</dd>
+</dl></li>
+<li><dl>
+<dt>微服务架构</dt>
+<dd>熟悉 K8s、微服务相关技术和理念，对于服务拆分和管理、Service Mesh 等相关技术都有所了解。</dd>
+
+<dd>负责过多款跨语言微服务框架的开发和维护，如服务发现、资源发现、配置管理等框架。</dd>
+</dl></li>
+<li><dl>
+<dt>综合能力</dt>
+<dd>熟悉常用前端、后端开发技术，熟悉 React、Python、Go 等，拥有开发完整应用的能力。</dd>
+
+<dd>拥有丰富的沟通经验、团队管理经验，拥有一定的产品设计和交互设计能力。</dd>
+</dl></li>
+</ul>
+
+<hr />
+
 <h3 id="work">工作经历</h3>
 
 <dl>
@@ -649,44 +673,112 @@ ul li dt {
 <p><em>在线架构团队</em>
 <strong>2020.05 至今</strong></p>
 
-<p>设计研发新版 App Engine（Golang），以更接近 K8s 和云原生的方式，实现旧有系统相关功能，并支持多种新特性，如有状态服务部署、基于流量的金丝雀验证、基于 Sidecar 的插件机制、代码与配置同步回滚等。</p>
+<p>设计研发新版 App Engine（Golang）：</p>
 
-<p>基于 Istio 服务网格，组建更为完善的微服务熔断、限速、鉴权管理，以及更高性能的预发布、联调方案。并为以后全链路压测、流量染色、流量录制与回放、持久功能分支等功能打下基础。</p>
+<p>· 引入 Istio，使用云原生的服务发现、限速、熔断、鉴权、流量控制、链路追踪等，替代现有自研方案，避免多语言 SDK 的开发和维护成本。并为以后全链路压测、流量染色、流量录制与回放、持久功能分支等功能打下基础。<br />
+· 基于 Argo Workflows 开发部署流水线，使部署流程完全跑在 K8s 上，方便资源管理、权限控制等。<br />
+· 以基础设施即代码（IaC）为理念，将部署流程固化为 YAML 文件，方便重现、回滚等操作。<br />
+· 新增有状态服务的部署支持，支持代码、配置同步回滚，自定义金丝雀部署等多种功能。<br />
+· 扩展 App Engine 的作用范围，将产品研发的需求、项目等功能与开发流程进行绑定，方便统计人效。</p>
 </dd>
 
 <dd>
-<p><em>工程效率团队</em>
+<p><em>工程效率团队（Leader）</em>
 <strong>2016.07~2020.05</strong></p>
-
-<p>作为团队 Leader，带领团队设计和开发 Zhihu App Engine（ZAE），集构建（Jenkins），物理机、容器部署，定时任务管理，配置管理，资源管理，成本管理，监控报警，故障处理等功能于一身的 PaaS 平台（Python, React）。覆盖公司 90% 以上的业务。</p>
-
-<p>围绕业务开发需求，我们在镜像管理、金丝雀部署、蓝绿部署、预上线环境联调、容器调试、静态文件发布、路由管理（Nginx）、服务发现（Consul，HAProxy）、资源发现等多方面自研了方案。</p>
-
-<p>参与公司微服务治理，维护各语言公用的 RPC、离线任务、配置中心等组件，并支持服务的熔断、限速、鉴权（HAProxy）等功能。</p>
-
-<p>统一公司开发流程与规范，制定研发流程质量、安全指标，建设公司测试环境，规范业务开发运作流程。</p>
 </dd>
 
-<dt>微学明日</dt>
+<dd>
+<p>应用平台</p>
+
+<p>从零开始设计和开发知乎的 PaaS 平台 ZAE（Python）。</p>
+
+<p>实现了较为强大的 CI 功能：</p>
+
+<p>· 支持跨语言、多版本 Docker 镜像的构建，支持多阶段构建。<br />
+· 构建系统支持 tarball、容器镜像等多种构建产物输出。<br />
+· 支持基于 Sonar 的代码静态质量分析和约束。</p>
+
+<p>以及 CD 功能：</p>
+
+<p>· 支持物理机（Fabric）、容器（K8s）、定时任务（自研）、静态文件（Nginx）等多种部署。<br />
+· 支持弹性伸缩、蓝绿部署、金丝雀部署、预上线环境、多机房部署，实现了秒级的上线和回滚。<br />
+· 支持不限数量的联调环境，允许多个应用在未上线前创建临时环境进行联调测试，允许内测版 App 在手机上直接选择环境进行测试。<br />
+· 支持创建不限数量的在线调试容器，用于调试线上 Bug、执行批处理任务，提供 Web 端访问。<br />
+· 支持部署过程中的质量验证，如冒烟测试、文档测试、在线覆盖率测试、手动提测等。</p>
+
+<p>同时兼顾了应用平台的其他功能，如：</p>
+
+<p>· 入口层管理：提供域名管理、Nginx 配置管理等功能。<br />
+· 服务管理：提供服务的监控图表（Grafana）、实时/离线日志（ELK、Kafka）、异常管理（Sentry）等。<br />
+· 资源管理：对数据库、缓存、消息队列等资源进行生命周期、成本管理。<br />
+· 安全管理：漏洞检测、依赖检测、服务鉴权等。</p>
+
+<p><em>成效：</em></p>
+
+<p>· 平台覆盖了公司 90% 以上前后端业务，使开发者全自助维护各自应用，整个知乎零运维人员。
+· 统一了公司的整体开发、测试流程和代码规范，统一了测试环境、预上线环境的使用规范。<br />
+· 金丝雀部署、联调环境等机制，基本避免了由新代码上线引发的全站故障。<br />
+· 移除了 90% 以上的个人开发机需求，除了使用容器部署，还用容器解决线上故障，节省了大量的成本。<br />
+· 曾受邀在猿辅导、金山云、Face++、GrowingIO 等公司分享相关经验。<br />
+　</p>
+</dd>
+
+<dd>
+<p>微服务</p>
+
+<p>开发和维护跨语言的平台基础 SDK，如 RPC 框架（基于 Apache Avro -> Thrift）、服务发现（基于 HAProxy &amp; Consul）、资源发现、配置管理、功能开关等。</p>
+
+<p>参与公司的微服务治理与拆分，推动微服务实现降级，统一各应用的 SDK 版本。</p>
+
+<p>与其他团队合作，提供了服务的熔断、限速、鉴权、流量录制、监控、日志、链路追踪等常用功能。</p>
+</dd>
+
+<dd>
+<p>团队管理</p>
+
+<p>负责 8 人团队的管理工作，熟练使用 OKR、One-on-one、周会等多种管理工具进行团队目标制定、成员绩效考评、定期成员沟通、持续引入新鲜血液。</p>
+
+<p>接受过 DISC 人格特质在内的多种团队管理心理学培训。具有较强的团队组织能力、对外沟通能力、向上向下负责的能力，能够以不同的方式推动团队成员的成长和和谐共处。</p>
+</dd>
+
+<dt>微学明日（在线教育创业公司）</dt>
 <dd>
 <p><em>后端开发团队</em>
 <strong>2015.05~2016.06</strong></p>
 
-<p>负责题库、平板教学等在线教育系统的后端、爬虫、支付等功能的编写（Python）。兼职部分前端开发。</p>
+<p>负责题库、平板教学等在线教育系统的后端（Django）、爬虫（Scrapy）、在线支付等相关功能。</p>
+
+<p>敏捷开发，熟悉 Scrum、测试驱动开发机制。兼职部分项目的前端开发。</p>
 </dd>
 
 <dt>爱奇艺</dt>
 <dd>
 <p><em>计算云团队</em>
 <strong>2013.03~2015.05</strong></p>
+</dd>
 
-<p>从零开始设计基于 Mesos、Docker 的云计算平台，驱动多 IDC 共 500 台以上虚拟机、物理机协同工作。促成 Hadoop, Spark, Storm, Chronos, 视频转码等分布式计算组件在该平台的弹性混部，提升资源利用率。</p>
+<dd>
+<p>应用平台</p>
 
-<p>初步设计和开发基于 Marathon、Jenkins、Nginx 的应用平台，成为现在爱奇艺云计算平台的雏形。</p>
+<p>初步设计和开发基于 Marathon、Jenkins、Nginx 的应用平台，和基于 Vagrant 的本地开发工作流，具有基础的 CI/CD 能力，成为现在爱奇艺云计算平台的雏形。</p>
+</dd>
 
-<p>在公司内外提供相关培训与公开课，发表专利和杂志文章若干，为 Mesos 周边项目提交开源代码若干。</p>
+<dd>
+<p>混合云平台</p>
+
+<p>从零开始设计基于 Mesos 的混合云计算平台：</p>
+
+<p>· 引入 Docker，替换原有基于 OpenStack 维护的虚拟机、OpenVZ、KVM 混合集群。<br />
+· 促成 Hadoop, Spark, Storm, Chronos 等分布式计算组件在该平台的弹性混合部署。<br />
+· 编写自定义框架，将公司核心视频转码业务迁移至 Mesos。<br />
+· 驱动多 IDC 共 500 台以上虚拟机、物理机协同工作。<br />
+· 开发了集群资源、任务审计平台，并为 Mesos 周边项目提交开源代码若干。</p>
+
+<p>该平台整合了公司物理机、虚拟机计算资源，通过计算资源的复用，大幅度节约了公司成本。</p>
 </dd>
 </dl>
+
+<hr />
 
 <h3 id="education">教育经历</h3>
 
@@ -698,7 +790,7 @@ ul li dt {
 
 <p>阅读 Linux 内核源码，了解内核启动、系统调用、进程调度等相关原理。</p>
 
-<p>在 Intel 公司实习，负责 Meego 性能优化、Google Chromium 核心定制等工作。</p>
+<p>在 Intel 公司实习，负责 Meego Linux 性能优化、Google Chromium 代码定制等工作。</p>
 </dd>
 
 <dt>中国地质大学（北京）</dt>
