--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@ ul li dt {
 <blockquote>
   <p>(+86) 1xx-xxxx-xxxx<br />
   <a href="ivenvd@gmail.com">ivenvd@gmail.com</a><br />
-  <a href="https://github.com/iven/">https://github.com/iven/</a></p>
+  <a href="https://github.com/iven">https://github.com/iven</a></p>
 </blockquote>
 
 <hr />
@@ -668,10 +668,18 @@ ul li dt {
 <h3 id="work">工作经历</h3>
 
 <dl>
+<dt>Shopee</dt>
+<dd>
+<p><em>研发效能 SRE 团队（Leader）</em>
+<strong>2022.01~2022.03</strong></p>
+
+<p>主要负责效能相关稳定性建设，建设故障自愈、MTTR、制定 SLA 等。</p>
+</dd>
+
 <dt>知乎</dt>
 <dd>
-<p><em>在线架构团队</em>
-<strong>2020.05 至今</strong></p>
+<p><em>微服务架构团队（Leader）</em>
+<strong>2020.05~2021.12</strong></p>
 
 <p>设计研发新版 App Engine（Golang）：</p>
 
@@ -711,16 +719,15 @@ ul li dt {
 <p>· 入口层管理：提供域名管理、Nginx 配置管理等功能。<br />
 · 服务管理：提供服务的监控图表（Grafana）、实时/离线日志（ELK、Kafka）、异常管理（Sentry）等。<br />
 · 资源管理：对数据库、缓存、消息队列等资源进行生命周期、成本管理。<br />
-· 安全管理：漏洞检测、依赖检测、服务鉴权等。</p>
-
-<p><em>成效：</em></p>
+· 安全管理：漏洞检测、依赖检测、服务鉴权等。<br />
+　
+<em>成效：</em></p>
 
 <p>· 平台覆盖了公司 90% 以上前后端业务，使开发者全自助维护各自应用，整个知乎零运维人员。
 · 统一了公司的整体开发、测试流程和代码规范，统一了测试环境、预上线环境的使用规范。<br />
 · 金丝雀部署、联调环境等机制，基本避免了由新代码上线引发的全站故障。<br />
 · 移除了 90% 以上的个人开发机需求，除了使用容器部署，还用容器解决线上故障，节省了大量的成本。<br />
-· 曾受邀在猿辅导、金山云、Face++、GrowingIO 等公司分享相关经验。<br />
-　</p>
+· 曾受邀在猿辅导、金山云、Face++、GrowingIO 等公司分享相关经验。</p>
 </dd>
 
 <dd>
@@ -746,25 +753,13 @@ ul li dt {
 <p><em>后端开发团队</em>
 <strong>2015.05~2016.06</strong></p>
 
-<p>负责题库、平板教学等在线教育系统的后端（Django）、爬虫（Scrapy）、在线支付等相关功能。</p>
-
-<p>敏捷开发，熟悉 Scrum、测试驱动开发机制。兼职部分项目的前端开发。</p>
+<p>负责题库、平板教学等系统的前后端、爬虫、支付等相关功能。敏捷开发，熟悉 Scrum、测试驱动开发机制。</p>
 </dd>
 
 <dt>爱奇艺</dt>
 <dd>
 <p><em>计算云团队</em>
 <strong>2013.03~2015.05</strong></p>
-</dd>
-
-<dd>
-<p>应用平台</p>
-
-<p>初步设计和开发基于 Marathon、Jenkins、Nginx 的应用平台，和基于 Vagrant 的本地开发工作流，具有基础的 CI/CD 能力，成为现在爱奇艺云计算平台的雏形。</p>
-</dd>
-
-<dd>
-<p>混合云平台</p>
 
 <p>从零开始设计基于 Mesos 的混合云计算平台：</p>
 
@@ -775,6 +770,8 @@ ul li dt {
 · 开发了集群资源、任务审计平台，并为 Mesos 周边项目提交开源代码若干。</p>
 
 <p>该平台整合了公司物理机、虚拟机计算资源，通过计算资源的复用，大幅度节约了公司成本。</p>
+
+<p>另外，初步设计和开发基于 Marathon、Jenkins、Nginx 的应用平台，和基于 Vagrant 的本地开发工作流，具有基础的 CI/CD 能力，成为现在爱奇艺云计算平台的雏形。</p>
 </dd>
 </dl>
 
@@ -808,7 +805,7 @@ ul li dt {
 
 <h3 id="footer">Footer</h3>
 
-<p>许立剑 - Github: <a href="https://github.com/iven">@iven</a> - Twitter: <a href="https://twitter.com/ivenvd">@ivenvd</a></p>
+<p>Iven - Github: <a href="https://github.com/iven">@iven</a> - Twitter: <a href="https://twitter.com/ivenvd">@ivenvd</a></p>
 
     </div>
 </div>
